@@ -64,6 +64,10 @@ make install
 %{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Console/ConsoleTest
 %{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Curses/README
 %{_prefix}/share/@PACKAGE@-@VERSION@-@RELEASE@/Example/Curses/CursesTest
+%{_prefix}/share/@PACKAGE@/CUnit-List.dtd
+%{_prefix}/share/@PACKAGE@/CUnit-List.xsl
+%{_prefix}/share/@PACKAGE@/CUnit-Run.dtd
+%{_prefix}/share/@PACKAGE@/CUnit-Run.xsl
 
 # Add the change log in ChangeLog file located under source home directory.
 # The same file is inturn used internally to populate the change log for the RPM
