@@ -1,10 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(CUnit/Sources/Framework/AssertImpl.c)
-AM_INIT_AUTOMAKE(CUnit, 1.0-6B)
+AM_INIT_AUTOMAKE(CUnit, 1.0-7)
 
 PACKAGE=CUnit
 VERSION=1.0
-RELEASE=6B
+RELEASE=7
 
 TOPDIR=`pwd`
 
@@ -65,4 +65,5 @@ AC_OUTPUT( Makefile \
 		  Examples/CursesTest/Makefile \
 		  Man/Makefile \
 		  Man/man3/Makefile \
-		  Man/man8/Makefile )
+		  Man/man8/Makefile \
+		  Share/Makefile )
